--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,11 @@
 		    <plugin>
                      <groupId>org.apache.maven.plugins</groupId>
                      <artifactId>maven-war-plugin</artifactId>
+                     <version>3.2.2</version>
+                    </plugin>
+             <plugin>
+                     <groupId>org.apache.maven.plugins</groupId>
+                     <artifactId>maven-war-plugin</artifactId>
                      <version>3.3.1</version>
                     </plugin>
  		    <plugin>
