--- a/pom.xml
+++ b/pom.xml
@@ -136,7 +136,7 @@
 		   <plugin>
                      <groupId>org.apache.maven.plugins</groupId>
                      <artifactId>maven-war-plugin</artifactId>
-                     <version>3.3.1</version>
+                     <version>3.2.2</version>
                     </plugin>
  		    <plugin>
  		        <groupId>org.jacoco</groupId>
@@ -161,12 +161,11 @@
 		</plugin>
         </plugins>
     </build>
-	<!--<repositories>
+	<repositories>
     <repository>
       <id>${NEXUS-GRP-REPO}</id>
       <url>http://${NEXUSIP}:${NEXUSPORT}/repository/${NEXUS-GRP-REPO}/</url>
     </repository>
   </repositories>
-  -->
 </project>
     
