--- a/StagePipeline/Jenkinsfile
+++ b/StagePipeline/Jenkinsfile
@@ -20,6 +20,9 @@ pipeline {
         NEXUS_LOGIN = 'nexuslogin'
         SONARSERVER = 'sonarserver'
         SONARSCANNER = 'sonarscanner'
+        registryCredential = 'ecr:us-west-2:awscreds'
+        appRegistry = '903172574917.dkr.ecr.us-west-2.amazonaws.com/vprofileappimg'
+        vprofileRegistry = "https://903172574917.dkr.ecr.us-west-2.amazonaws.com/"
     }
 
     stages {
@@ -92,6 +95,23 @@ pipeline {
                   ]
                 )
             }
+        }
+    stage('Build App Image') {
+        steps {
+            script{
+                dockerImage = docker.build(appRegistry+":BUILD_NUMBER","./Docker-files/app/multistage/")
+            }
+        }
+    }
+    stage('Upload App Image') {
+          steps{
+            script {
+              docker.withRegistry( vprofileRegistry, registryCredential ) {
+                dockerImage.push("$BUILD_NUMBER")
+                dockerImage.push('latest')
+              }
+            }
+          }
         }
     }
     post {
