updating script to deploy to ECS on the Jenkins file

--- a/StagePipeline/Jenkinsfile
+++ b/StagePipeline/Jenkinsfile
@@ -23,6 +23,8 @@ pipeline {
         registryCredential = 'ecr:us-west-2:awscreds'
         appRegistry = '903172574917.dkr.ecr.us-west-2.amazonaws.com/vprofileappimg'
         vprofileRegistry = "https://903172574917.dkr.ecr.us-west-2.amazonaws.com/"
+        cluster = "vvprofilestaging"
+        service = "vproappstagesvc"
     }
 
     stages {
@@ -112,6 +114,13 @@ pipeline {
               }
             }
           }
+        }
+    stage('Deploy to ECS staging') {
+            steps {
+                withAWS(credentials: 'awscreds', region: 'us-west-2') {
+                    sh 'aws ecs update-service --cluster ${cluster} --service ${service} --force-new-deployment'
+                } 
+            }
         }
     }
     post {
